[tool.poetry]
name = "python-converter"
version = "0.1.0"
description = ""
authors = ["Alexander Kazeev <kakylya_ija@bk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
xlwt = "^1.3.0"
openpyxl = "^3.1.4"
xlrd = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
